# sps_genai_assignment2

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: infer.py  labels.json  main.py  model.py  train_cifar10.py
